Bug 472107 - OSD when muting or unmuting from the icon are reversed
Summary: OSD when muting or unmuting from the icon are reversed
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Microphone Indicator widget (other bugs)
Version First Reported In: 5.27.6
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 465301 486089 492212 521690 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-07-09 19:33 UTC by Florian
Modified: 2026-08-12 22:25 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Florian 2023-07-09 19:33:24 UTC
SUMMARY
When you click on the microphone icon in the task bar to mute/un-mute, the message that pops up on-screen shows the opposite of what you've done.

STEPS TO REPRODUCE
1. Click on the microphone icon in the bottom right (task bar) to mute/un-mute.

OBSERVED RESULT
If you click to mute, the message that pops up on-screen shows 'Volume 100%'.
If you click the icon again to un-mute, the message says 'Microphone Muted'.

EXPECTED RESULT
The opposite on-screen messages for the respective actions.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Tumbleweed/Plasma 5.27.6
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.107.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Love you folks <3
Comment 1 Nate Graham 2023-09-12 20:50:16 UTC
Can confirm.
Comment 2 Nate Graham 2023-09-12 21:10:56 UTC
The problem seems to be that when we get to MicrophoneIndicator::volumePercent(), source->isMuted() returns the opposite of what it should.
Comment 3 Nate Graham 2024-08-27 19:10:20 UTC
*** Bug 492212 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2025-10-23 18:20:48 UTC
*** Bug 486089 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2025-10-23 18:45:25 UTC
*** Bug 465301 has been marked as a duplicate of this bug. ***
Comment 6 Simon Jackson 2026-06-10 09:59:09 UTC
Confirmed on Debian Trixie (updated 2026-06-10). This is likely a = and ! confusion.
Comment 7 Simon Jackson 2026-06-10 10:07:58 UTC
Does the mute status of the interface actually change fast enough in a multithreading to supply such upto date information? I can't move my mouse fast enough to actually click the OSD for any use. A click hold supplies more information for a user, so is this OSD just unnecessary?
Comment 8 JJ 2026-06-18 22:02:43 UTC
*** Bug 521690 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2026-07-23 21:10:32 UTC
In progress with https://invent.kde.org/plasma/plasma-pa/-/merge_requests/415.
Comment 10 Nate Graham 2026-08-12 22:25:51 UTC
Git commit 20bd08db0834f3f31d7f63e903dddf3d13bd50d1 by Nate Graham, on behalf of Undef Fox.
Committed on 12/08/2026 at 22:25.
Pushed by ngraham into branch 'master'.

microphoneindicator: Show correct information in OSD when using to toggle mute

When toggling 'mute all' for source devices by clicking on the microphone
indicator widget, sometimes update signal comes from a different device first,
causing osd to show un-updated info. This ensuers that OSD only shown when
default device is the one sending the update signal.
FIXED-IN: 6.8.0

M  +27   -2    src/qml/microphoneindicator.cpp
M  +2    -0    src/qml/microphoneindicator.h

https://invent.kde.org/plasma/plasma-pa/-/commit/20bd08db0834f3f31d7f63e903dddf3d13bd50d1