microphoneindicator: keep SourceModel->isMuted() in sync with the model

We query this property to determind if the default input is muted, so we
need to set it appropriately when we update our model.

BUG: 472107
FIXED-IN: 6.0